[package]
name = "mempool_space_api"
version = "0.0.2"
edition = "2024"
rust-version = "1.85.0"
authors = ["ValuedMammal <valuedmammal@protonmail.com>"]
homepage = "https://github.com/ValuedMammal/mempool-api"
repository = "https://github.com/ValuedMammal/mempool-api"
documentation = "https://docs.rs/mempool_space_api"
description = "Generic asynchronous client library for mempool.space API"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bitcoin = { version = "0.32.7", default-features = false }
reqwest = { version = "0.12.23", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
anyhow = "1"
mempool_space_api = { path = ".", features = ["reqwest"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []
reqwest = ["dep:reqwest"]

[[example]]
name = "client"
