[package]
name = "mempool_space_api"
version = "0.0.3"
edition = "2024"
rust-version = "1.85.0"
authors = ["ValuedMammal <valuedmammal@protonmail.com>"]
homepage = "https://github.com/ValuedMammal/mempool-api"
repository = "https://github.com/ValuedMammal/mempool-api"
documentation = "https://docs.rs/mempool_space_api"
description = "Generic asynchronous client library for mempool.space API"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bitcoin = { version = "0.32.7", default-features = false, features = ["serde"] }
serde = { version = "1", features = ["derive"] }

# Optional dependencies
reqwest = { version = "0.12.23", features = ["json"], optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"], optional = true }

[dev-dependencies]
anyhow = "1"
futures = { version = "0.3"}
log = "0.4"
mempool_space_api = { path = ".", features = ["reqwest"] }
miniscript = { version = "12" }
pretty_env_logger = "0.5.0"

[features]
default = []
reqwest = ["dep:reqwest", "dep:tokio"]

[[example]]
name = "client"

[[example]]
name = "sync"
